update contact once ready, draft ok enough

--- a/site-content/contact.html
+++ b/site-content/contact.html
@@ -2,9 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Contact page</title>
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="body.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Domine:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<nav class="nav-bar">
+    <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
+
+<main>
+    <h1>
+        Chloe Yip
+        <img class="headliner" src="pics-website/head-new.jpg" alt="avatar">
+        <img class="monkey-headliner" src="pics-website/monkey.jpg" alt="monkey">
+    </h1>
+
+    <div class="content-container">
+        <div class="general-text">
+            Feel free to reach me through my personal email: emmacarstairs2013@gmail.com <br>
+            Link Epic new Software Engineering Resume here <br>
+            Link Epic new PM Resume here as well <br>
+            Link to Github (improving and personal) <br>
+            Link to Linkedin <br>
+        </div>
+
+    </div>
+</main>
+
+
 
 </body>
 </html>
