--- a/site-content/home.html
+++ b/site-content/home.html
@@ -14,8 +14,8 @@
 <nav class="nav-bar">
     <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
@@ -23,16 +23,17 @@
 <main>
     <h1>
         Chloe Yip
-        <img class="head" src="pics-website/head.jpg" alt="avatar">
+        <img class="headliner" src="pics-website/head-new.jpg" alt="avatar">
+        <img class="monkey-headliner" src="pics-website/monkey.jpg" alt="monkey">
     </h1>
 
     <div class="content-container">
-        <div class="about-blob">
+        <div class="general-text">
             Hi there! My name is Chloe, and I am a third year <a href="https://www.sfu.ca/computing/prospective-students/undergraduate-students/programs/degree-programs/softwaresystems.html">Software Systems</a> major at SFU doing an engineering minor in
             Computer and Electronics design. I'm interested in pursuing a career in software development, technical management,
             and computer engineering. Currently, I'm a <a href="https://github.com/cyip10">Software Developer Intern</a> at <a href="https://www.improving.com/">Improving</a> (formerly BitQuill Technologies). <br><br>
 
-            I'm a member of SFU Enactus, Aqua Analyzer team, as a Software and Firmware Developer! In the spring I will be speaking at the Western Regional Competition for this project. <br>
+            I'm a member of SFU Enactus, Aqua Analyzer team, as a Software and Firmware Developer! In the spring I will be speaking at the Western Regional Case Competition for this project. <br>
             In my free time, I enjoy staying active, exploring new food spots, and being creative.
             Right now, I’m training for a triathlon coming up in March, and I’m also part of a pentasport and volleyball league.
             <br><br>
@@ -48,6 +49,9 @@
             </div>
             <div class="images">
                 <img src="pics-website/me-pomo.jpg" alt="A photo of me at the port moody pier">
+            </div>
+            <div class="images">
+                <img src="pics-website/me-theater.jpg" alt="A photo of me when I did theater">
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
