--- a/site-content/about.html
+++ b/site-content/about.html
@@ -2,9 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>About me:3</title>
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="body.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Domine:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<nav class="nav-bar">
+    <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
+
+<main>
+    <h1>
+        Chloe Yip
+        <img class="headliner" src="pics-website/head-new.jpg" alt="avatar">
+        <img class="monkey-headliner" src="pics-website/monkey.jpg" alt="monkey">
+    </h1>
+
+    <div class="content-container">
+        <div class="facts">
+            I guess you really wanted to learn about me😩😩. Pls don't leave jk lmfao... <br><br>
+
+            Here are some FUN facts about me: <br>
+            - I have 2 sisters(middle child moment) and a yorkshire terrier.<br>
+            - I was a part of my high school's theater program (I <3 musicals)<br>
+            - I love the ocean 🐋🐡🦭🐚<br>
+            - Lady Midnight by Cassandra Clare is my comfort book.<br>
+            - I love to travel (can't wait to have money)<br>
+            - I've been playing volleyball since I was 12. My new additions are bouldering and golf. 
+        </div>
+
+        <div class="professional-facts">
+            Here are some professional facts about me: <br>
+                - I am
+        </div>
+
+    </div>
+</main>
+
+
 
 </body>
 </html>
